# DistrictIntel

./: .gitignore  AI_GUIDELINES.md  PROJECT.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
districtintel/: __init__.py  __main__.py  cli.py
districtintel/config/: __init__.py  settings.py
districtintel/database/: __init__.py  connection.py  schema.py  sqlite.py
districtintel/models/: __init__.py  district.py  fact.py  provider.py  research.py  school.py
districtintel/providers/: __init__.py  capabilities.py  coordinator.py  interfaces.py  mahoning_auditor.py  placeholders.py  registry.py
districtintel/repositories/: __init__.py  districts.py  evidence.py  facts.py  research.py  schools.py
districtintel/research/: __init__.py  coordinator.py  interfaces.py
districtintel/services/: __init__.py  school_importer.py
districtintel/utils/: __init__.py  logging.py
districtintel/web/: __init__.py  client.py  models.py
docs/: ARCHITECTURE.md  DECISIONS.md
tests/: test_cli.py  test_database_schema.py  test_evidence_repository.py  test_fact_models.py  test_fact_repository.py  test_mahoning_auditor_provider.py  test_provider_framework.py  test_research_coordinator.py  test_research_models.py  test_source_type.py  test_web_client.py
